--- a/package.json
+++ b/package.json
@@ -3,33 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "7.9.0",
-    "npm": "4.2.0"
+    "node": "^8.0.0",
+    "npm": "5.0"
   },
   "engineStrict": true,
   "dependencies": {
     "contentful": "4.6.1",
     "jquery": "3.2.1",
-    "marked": "^0.3.6",
+    "marked": "^0.4.0",
     "moment": "^2.18.1",
-    "node-sass-chokidar": "0.0.3",
+    "node-sass-chokidar": "1.3.0",
     "normalize.css": "7.0.0",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-helmet": "5.1.3",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-loading": "0.1.4",
-    "react-router-dom": "4.1.1"
+    "react-router-dom": "4.2.2"
   },
   "devDependencies": {
-    "react-scripts": "1.0.7"
+    "react-scripts": "1.1.4"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch",
     "start": "react-scripts start",
     "dev": "npm run start | npm run watch-css",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy-prod": "npm run build && aws s3 sync build/ s3://andreatakamiya.com --delete --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers"
   }
 }
