--- a/package.json
+++ b/package.json
@@ -3,30 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "^8.0.0",
-    "npm": "5.0"
+    "node": "10.15.3",
+    "npm": "6.4.1"
   },
   "engineStrict": true,
   "dependencies": {
-    "contentful": "4.6.1",
-    "jquery": "^3.4.1",
-    "marked": "^0.6.2",
-    "moment": "^2.18.1",
-    "node-sass": "^4.12.0",
+    "contentful": "^7.8.1",
+    "jquery": "3.4.1",
+    "marked": "0.6.2",
+    "moment": "^2.24.0",
+    "node-sass": "4.12.0",
     "normalize.css": "7.0.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.0.0",
+    "react": "16.8.6",
+    "react-dom": "16.4.2",
     "react-loading": "0.1.4",
     "react-router-dom": "4.2.2"
   },
   "devDependencies": {
-    "react-scripts": "^3.0.1"
+    "react-scripts": "3.0.1"
   },
   "scripts": {
-    "build-css": "node-sass-chokidar src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch",
     "start": "react-scripts start",
-    "dev": "npm run start | npm run watch-css",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
