--- a/package.json
+++ b/package.json
@@ -8,16 +8,20 @@
   },
   "engineStrict": true,
   "dependencies": {
+    "animated": "^0.2.2",
     "contentful": "^7.8.1",
     "jquery": "3.4.1",
     "marked": "0.6.2",
     "moment": "^2.24.0",
     "node-sass": "4.12.0",
     "normalize.css": "7.0.0",
-    "react": "16.8.6",
+    "react": "^16.8.6",
     "react-dom": "16.4.2",
     "react-loading": "0.1.4",
-    "react-router-dom": "4.2.2"
+    "react-router-dom": "4.2.2",
+    "react-swipe": "^6.0.4",
+    "react-swipeable-views": "^0.13.3",
+    "swipe-js-iso": "^2.1.5"
   },
   "devDependencies": {
     "react-scripts": "3.0.1"
