--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   },
   "engineStrict": true,
   "dependencies": {
+    "bulma": "^0.7.5",
     "contentful": "^7.8.1",
     "jquery": "3.4.1",
-    "marked": "0.6.2",
+    "marked": "^0.7.0",
     "moment": "^2.24.0",
     "node-sass": "4.12.0",
     "normalize.css": "7.0.0",
